--- a/html/schedule-page.html
+++ b/html/schedule-page.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
   <link rel="stylesheet" href="../styles/schedulePage.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <script src="../../scripts/script.js"></script>
+  <script src="../scripts/script.js"></script>
   <script defer="defer">
       $(function(){
           var filename = "./header.html"
